# travel-pricing-scraper

./: .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yml
docs/: 01_tutorial.md  02_contributing.md  index.md
docs/api/: flights.md
docs/stylesheets/: extra.css
docs/templates/: cards.html  installation.md  introduction.md  todos.md
tests/: test_cli.py  test_flights.py
travel_pricing_scraper/: cli.py  flights.py  models.py
travel_pricing_scraper/scrapers/flights/: __init__.py  decolar.py
travel_pricing_scraper/utils/: __init__.py
