[tool.poetry]
name = "travel-pricing-scraper"
version = "0.1.0"
description = ""
authors = ["Kalel L. Martinho <kalel@tutamail.com>"]
readme = "README.md"
packages = [{include = "travel_pricing_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.11.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.16"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
